--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1274,3 +1274,15 @@ h6 {
   position: absolute;
     bottom: 20px;
 }
+.prerequisite-item {
+  position: relative;
+}
+.remove-prerequisite {
+  position: absolute;
+  right: -6px;
+  top: -18px;
+  font-size: 13px;
+  border-radius: 50%;
+  padding: 0px 7px;
+  line-height: 23px;
+}
