Worked on the Logo changes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1228,7 +1228,7 @@ h6 {
   padding: 20px 0;
   font-size: 14px;
   transition: all 0.3s;
-  border-top: 1px solid #cddfff;
+  /* border-top: 1px solid #cddfff; */
 }
 
 .footer .copyright {
@@ -1288,4 +1288,7 @@ h6 {
 }
 .avms_logo{
   width: 20%;
+}
+.avms_logo_login{
+  width: 30%;
 }
