--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1301,3 +1301,107 @@ img#courseresource_img {
 #document_table th, #document_table td {
   border: 1px solid #dee2e6 !important;
 }
+.folder-wrapper {
+  position: relative;
+  width: 160px;
+  height: 130px;
+  cursor: pointer;
+}
+
+.folder-visual {
+  width: 100%;
+  height: 100%;
+  transition: filter 0.3s ease;
+}
+
+.folder-wrapper:hover .folder-visual {
+  filter: blur(1px);
+}
+
+.folder-container {
+  width: 70%;
+  height: 70%;
+  background-color: #facc15;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  position: relative;
+  margin-top:20%
+}
+
+.folder-tab {
+  width: 60%;
+  height: 20px;
+  background-color: #fffffd;
+  position: absolute;
+  top: -15px;
+  left: 12px;
+  border: 2px solid #facc15;
+  border-bottom: none;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.folder-icon {
+  font-size: 48px;
+  color: #fff;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.folder-actions {
+  position: absolute;
+  bottom: 50px;
+  left: 35%;
+  transform: translateX(-50%) scale(0);
+  display: flex;
+  gap: 12px;
+  opacity: 0;
+  transition: all 0.3s ease;
+  pointer-events: none;
+  z-index: 5;
+}
+
+.folder-wrapper:hover .folder-actions {
+  transform: translateX(-50%) scale(1);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+
+.text-center.mt-2.fw-bold.folder_name {
+  margin-top: -1.5rem !important;
+  text-align: center !important;
+  margin-right: 43px;
+}
+
+.text-center.mt-2.fw-bold.document_title {
+  margin-top: -22px !important;
+  margin-left: -51px;
+}
+
+/* Responsive adjustments */
+@media (max-width: 600px) {
+  .folder-wrapper {
+    width: 130px;
+    height: 110px;
+  }
+
+  .folder-icon {
+    font-size: 40px;
+  }
+
+  .folder-actions a {
+    text-decoration: none;
+    background: #fff;
+    color: #333;
+    padding: 4px 5px;
+    border-radius: 50%;
+    font-size: 18px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    transition: background 0.3s ease, transform 0.3s ease;
+}
+}
+
+
