--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1348,6 +1348,7 @@ img#courseresource_img {
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display:none !important; 
 }
 
 .folder-actions {
@@ -1378,7 +1379,7 @@ img#courseresource_img {
 
 .text-center.mt-2.fw-bold.document_title {
   margin-top: -22px !important;
-  margin-left: -51px;
+  margin-left: -17px;
 }
 
 /* Responsive adjustments */
@@ -1390,17 +1391,104 @@ img#courseresource_img {
 
   .folder-icon {
     font-size: 40px;
+    
   }
 
   .folder-actions a {
     text-decoration: none;
     background: #fff;
-    color: #333;
+    color: #333; 
     padding: 4px 5px;
     border-radius: 50%;
     font-size: 18px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     transition: background 0.3s ease, transform 0.3s ease;
+}
+}
+
+.file-container {
+  width: 60%;
+  height: 80%;
+background-color: #3b82f6;
+border-radius: 12px;
+position: relative;
+cursor: pointer;
+overflow: hidden;
+transition: all 0.3s ease-in-out;
+}
+
+.file-corner {
+position: absolute;
+top: 0;
+right: 0;
+width: 40px;
+height: 40px;
+background: #dbeafe;
+clip-path: polygon(100% 0, 0% 0%, 100% 100%);
+border-top-right-radius: 12px;
+z-index: 1;
+}
+
+.file-content {
+
+display: none;
+}
+
+.file-container:hover .file-content {
+filter: blur(4px);
+}
+
+.file-actions {
+position: absolute;
+top: 50%;
+left: 30%;
+transform: translate(-50%, -50%) scale(0);
+opacity: 0;
+transition: all 0.3s ease;
+z-index: 2;
+pointer-events: none;
+display: flex;
+ gap: 10px;
+
+}
+
+.folder-wrapper:hover .file-actions {
+  transform: translateX(-50%) scale(1);
+  opacity: 1;
+  pointer-events: auto;
+  }
+
+  .file-actions a:hover {
+      background: #f3f4f6;
+      color: #fff !important;
+  }
+  .file-actions a {
+      text-decoration: none;
+      width: 30px;
+      height: 30px;
+      background: #fff;
+      text-align: center;
+      padding: 3px;
+      border-radius: 50%;
+      font-size: 16px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: background 0.3s ease, transform 0.3s ease;
+  }
+
+@media (max-width: 600px) {
+.file-container {
+  width: 130px;
+  height: 170px;
+}
+
+.file-content {
+  font-size: 40px;
+  display:none;
+}
+
+.file-actions a {
+  padding: 10px;
+  font-size: 14px;
 }
 }
 
