--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1298,6 +1298,21 @@ h6 {
   padding: 0px 7px;
   line-height: 23px;
 }
+.edit-remove-documents-container {
+  position: absolute;
+  right: -6px;
+  top: -18px;
+  font-size: 13px;
+  border-radius: 50%;
+  padding: 0px 7px;
+  line-height: 23px;
+}
+.resource-documents-item {
+  position: relative;
+}
+.edit-resource-documents-item {
+  position: relative;
+}
 .avms_logo{
   /* width: 20%; */
   height: 48px;
