rating section changes and ui

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1521,3 +1521,6 @@ display: flex;
 .rating-left-cont{
   margin-right: 10px;
 }
+.expiry .fas.fa-exclamation-triangle:before{
+  color: #dc3545 !important;
+}
