--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -383,6 +383,8 @@ h6 {
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
   background-color: #fff;
   padding-left: 20px;
+  cursor: pointer;
+  padding-right: 10px;
   /* Toggle Sidebar Button */
   /* Search Bar */
 }
